--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <script src="main.js"></script>
     <title>Color Switcher</title>
 </head>
+
 <body>
 
     <div style="color: black; font-weight: bold;">
@@ -17,11 +19,13 @@
         <h5 class="heading">This is heading 5</h5>
         <h6 class="heading">This is heading 6</h6>
     </div>
-    
 
-    <button type="button" id="btnStart"  onclick = "startChange()" style="color: black; border: none; border-radius: 5px; padding: 10px 20px">Start</button>
-    <button type="button" id="btnStop" onclick = "stopChange()" style="color: black; border: none; border-radius: 5px; padding: 10px 20px" 
-    >Stop</button>
+
+    <button type="button" id="btnStart" onclick="startChange()"
+        style="color: black; border: none; border-radius: 5px; padding: 10px 20px">Start</button>
+    <button type="button" id="btnStop" onclick="stopChange()"
+        style="color: black; border: none; border-radius: 5px; padding: 10px 20px">Stop</button>
 
 </body>
+
 </html>
