--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     </div>
 
     <div>
-        <h1 class="heading">This is heading 1</h1>
-        <h2 class="heading">This is heading 2</h2>
-        <h3 class="heading">This is heading 3</h3>
-        <h4 class="heading">This is heading 4</h4>
-        <h5 class="heading">This is heading 5</h5>
-        <h6 class="heading">This is heading 6</h6>
+        <h1 class="h">This is heading 1</h1>
+        <h2 class="h">This is heading 2</h2>
+        <h3 class="h">This is heading 3</h3>
+        <h4 class="h">This is heading 4</h4>
+        <h5 class="h">This is heading 5</h5>
+        <h6 class="h">This is heading 6</h6>
     </div>
 
 
